--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -242,3 +242,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
+
+apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services" 
