--- a/package.json
+++ b/package.json
@@ -4,28 +4,38 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
-    "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "android": "chmod 755 android/gradlew && expo run:android",
+    "pod install": "arch -x86_64 pod install"
   },
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-firebase/app": "^14.2.2",
     "@react-native-firebase/auth": "^14.2.2",
     "@react-native-firebase/firestore": "^14.2.2",
     "@react-native-firebase/storage": "^14.2.2",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.11.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
@@ -35,6 +45,10 @@
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
