--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": "./",
-    "paths": {
-      "@src/*": ["./src/*"],
-      "@components/*": ["./src/components/*"],
-      "@screens/*": ["./src/screens/*"],
-      "@assets/*": ["./src/assets/*"]
-    }
+    // "paths": {
+    //   "@src/*": ["./src/*"],
+    //   "@components/*": ["./src/components/*"],
+    //   "@screens/*": ["./src/screens/*"],
+    //   "@assets/*": ["./src/assets/*"]
+    // }
   }
 }
