--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,6 +24,8 @@ target 'gopizza' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   post_install do |installer|
     react_native_post_install(installer)
 
