--- a/ios/gopizza/Info.plist
+++ b/ios/gopizza/Info.plist
@@ -14,7 +14,13 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
-	<key>CFBundleSignature</key>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Give $(PRODUCT_NAME) permission to save photos</string>
+  <key>NSCameraUsageDescription</key>
+  <string>Give $(PRODUCT_NAME) permission to access your camera</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Give $(PRODUCT_NAME) permission to use your microphone</string>
+  <key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
