--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@react-native-firebase/auth": "^14.2.2",
     "@react-native-firebase/firestore": "^14.2.2",
     "@react-native-firebase/storage": "^14.2.2",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@react-navigation/stack": "^6.2.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -33,9 +34,11 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "^2.3.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.11.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
@@ -44,11 +47,18 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "~4.3.5"
   },
   "private": true
