--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.2.1",
+    "@types/": "expo/vector-icons",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "expo": "~44.0.2",
@@ -38,14 +39,14 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "18.0.8",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
